--- a/MZBlog.Web/Views/AdminPosts/New.cshtml
+++ b/MZBlog.Web/Views/AdminPosts/New.cshtml
@@ -66,7 +66,7 @@
             var _title = $(this).val();
             $('#post-title-preview').text(_title);
             if ($("#post-slug").val() == "") {
-                $.get("/mz-admin/slug?w=" + _title, function (data) {
+                $.post("/mz-admin/slug", { title: _title }, function (data) {
                     $("#post-slug").val(data);
                 });
             }
