--- a/MZBlog.Web/content/css/admin.css
+++ b/MZBlog.Web/content/css/admin.css
@@ -73,14 +73,14 @@ div.tagsinput {
 
     div.tagsinput input {
         width: 80px;
-        margin: 0px;
+        margin: 0;
         font-family: helvetica;
         font-size: 13px;
         border: 1px solid transparent;
         padding: 5px;
         background: transparent;
         color: #000;
-        outline: 0px;
+        outline: 0;
         margin-right: 5px;
         margin-bottom: 5px;
     }
@@ -93,7 +93,7 @@ div.tagsinput {
 .tags_clear {
     clear: both;
     width: 100%;
-    height: 0px;
+    height: 0;
 }
 
 .not_valid {
