--- a/MZBlog.Web/Views/Home/Details.cshtml
+++ b/MZBlog.Web/Views/Home/Details.cshtml
@@ -30,7 +30,7 @@
         {
             foreach (var tag in Model.BlogPost.Tags)
             {
-                <text>[ <a href="/tag/@tag.Slug">@tag.Name</a> ]</text>
+                <text>[ <a href="/tag/@tag">@tag.AsTag().Name</a> ]</text>
             }
         }
     </div>
