--- a/MZBlog.Web/Views/Home/Index.cshtml
+++ b/MZBlog.Web/Views/Home/Index.cshtml
@@ -29,7 +29,7 @@
             {
                 foreach (var tag in blogPost.Tags)
                 {
-                    <text> [ <a href="~/tag/@tag.Slug">@tag.Name</a> ]</text>
+                    <text> [ <a href="~/tag/@tag">@tag.AsTag().Name</a> ]</text>
                 }
             }
         </div>
