--- a/MZBlog.Web/Views/AdminPosts/Tags.cshtml
+++ b/MZBlog.Web/Views/AdminPosts/Tags.cshtml
@@ -25,11 +25,11 @@
             {
                 <tr>
                     <td>
-                       @tag.Key.Name
+                       @tag.Name
                     </td>
-                    <td>@tag.Key.Slug</td>
+                    <td>@tag.Slug</td>
                     <td>
-                        @tag.Value
+                        @tag.PostCount
                     </td>
                 </tr>
             }
