--- a/MZBlog.Web/content/css/mzblog.css
+++ b/MZBlog.Web/content/css/mzblog.css
@@ -97,8 +97,8 @@
 }
 
     .copyright img.creativecommons {
-        border-width: 0pt;
-        margin-top: 0px;
+        border-width: 0;
+        margin-top: 0;
         margin-right: 5px;
         text-align: left;
         height: 30px;
@@ -112,4 +112,52 @@
 footer {
     padding-top: 10px;
     margin-top: 20px;
+}
+
+.field-validation-error {
+    color: #f00;
+}
+
+.field-validation-valid {
+    display: none;
+}
+
+.input-validation-error {
+    border: 1px solid #f00 !important;
+    background-color: #fee !important;
+}
+/* Styles for validation helpers
+-----------------------------------------------------------*/
+.validation-summary-errors {
+    margin-bottom: 20px;
+    padding: 8px;
+    border: 1px solid #fbeed5;
+    border-color: #eed3d7;
+    -moz-border-radius: 4px;
+    -webkit-border-radius: 4px;
+    border-radius: 4px;
+    background-color: #FDDDC4;
+    color: #b94a48;
+    text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
+    font-weight: bold;
+    font-size: 12px;
+}
+
+    .validation-summary-errors ul {
+        margin: 5px;
+        padding: 0;
+    }
+
+        .validation-summary-errors ul li {
+            list-style: none;
+            margin: 5px 0 0;
+            padding: 5px 10px;
+            min-width: 214px;
+            border: 1px dashed #ddd;
+            background-color: #fff;
+            font-style: italic;
+        }
+
+.validation-summary-valid {
+    display: none;
 }
