--- a/MZBlog.Web/Views/Home/_Links.cshtml
+++ b/MZBlog.Web/Views/Home/_Links.cshtml
@@ -7,9 +7,10 @@
     </div>
 
     <div class="list-group">
-      <a href="http://www.linuxdot.net" class="list-group-item" target="_blank">Linux DotNET 大本营</a>
-      <a href="http://www.cnblogs.com/shanyou" class="list-group-item" target="_blank">张善友的博客</a>
-      <a href="http://www.5iadmin.com" class="list-group-item" target="_blank">网管小王的博客</a>
-      <a href="http://www.ugia.cn" class="list-group-item" target="_blank">UGiA</a>
+        <a href="http://www.linuxdot.net" class="list-group-item" target="_blank">Linux DotNET 大本营</a>
+        <a href="http://www.cnblogs.com/shanyou" class="list-group-item" target="_blank">张善友的博客</a>
+        <a href="http://www.5iadmin.com" class="list-group-item" target="_blank">网管小王的博客</a>
+        <a href="http://www.ugia.cn" class="list-group-item" target="_blank">UGiA</a>
+        <a href="http://www.coolcode.org" class="list-group-item" target="_blank">andot</a>
     </div>
 </div>
