--- a/MZBlog.Web/Views/_AdminLayout.cshtml
+++ b/MZBlog.Web/Views/_AdminLayout.cshtml
@@ -4,14 +4,13 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MZBlog</title>
+    <title>MZBlog 管理界面</title>
     <!--[if lt IE 9]>
         <script src="~/scripts/html5shiv.js"></script>
         <![endif]-->
-    <link href="~/content/bootstrap/bootstrap.min.css?v=3.3.2" rel="stylesheet" />
+
+    <link href="~/content/css/mz-admin.min.css?v=20150402" rel="stylesheet" />
     <link href="~/content/css/font-awesome.min.css?v=4.3.0" rel="stylesheet" />
-    <link href="~/content/css/sb-admin.min.css?v=20140101" rel="stylesheet" />
-    <link href="~/content/css/admin.min.css?v=20140101" rel="stylesheet" />
 </head>
 <body>
     <div id="wrapper">
@@ -75,6 +74,8 @@
 
     <script src="~/scripts/jquery-1.11.2.min.js"></script>
     <script src="~/scripts/bootstrap.min.js?v=3.3.2"></script>
+    <script src="~/scripts/bootstrap-markdown.js"></script>
+    <script src="~/scripts/bootstrap-markdown.zh.js"></script>
     @RenderSection("PostScripts", false)
 </body>
 </html>
