--- a/MZBlog.Web/content/css/mz-admin.css
+++ b/MZBlog.Web/content/css/mz-admin.css
@@ -6547,141 +6547,363 @@ button.close {
     display: none !important;
   }
 }
-body {
-  font-family: "Microsoft Yahei UI", "Microsoft YaHei", SimHei, "Helvetica Neue", Helvetica, Arial, sans-serif;
-  color: #333;
-  background-color: rgba(142, 193, 218, 0.5);
-  background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAECAYAAACp8Z5+AAAADklEQVQIW2NgQAXGZHAAGioAza6+Hk0AAAAASUVORK5CYII=);
+/**
+ * Bootstrap-Markdown.less
+ *
+ * @author Taufan Aditya @taufanaditya
+ * @copyright 2013 Taufan Aditya
+ */
+.md-editor {
+  display: block;
+  border: 1px solid #dddddd;
 }
-.navbar {
+.md-editor > .md-header,
+.md-editor .md-footer {
+  display: block;
+  padding: 6px 4px;
+  background: #f5f5f5;
+}
+.md-editor > .md-header {
+  margin: 0;
+}
+.md-editor > .md-preview {
+  background: #ffffff;
+  border-top: 1px dashed #dddddd;
+  border-bottom: 1px dashed #dddddd;
+  min-height: 10px;
+  overflow: auto;
+}
+.md-editor > textarea {
+  font-family: Menlo, Monaco, Consolas, "Courier New", monospace;
+  font-size: 14px;
+  outline: 0;
+  outline: thin dotted  \9;
+  /* IE6-9 */
+  margin: 0;
+  display: block;
+  padding: 0;
+  width: 100%;
+  border: 0;
+  border-top: 1px dashed #dddddd;
+  border-bottom: 1px dashed #dddddd;
   border-radius: 0;
-  border: none;
-  background-color: rgba(32, 32, 32, 0.8);
-  margin-bottom: 0;
+  box-shadow: none;
+  background: #eeeeee;
 }
-.navbar-default .navbar-brand,
-.navbar-default .navbar-nav > li > a {
-  color: #dfdfdf;
+.md-editor > textarea:focus {
+  box-shadow: none;
+  background: #ffffff;
 }
-.navbar-default .navbar-brand:hover,
-.navbar-default .navbar-nav > li > a:hover {
-  color: #fff;
+.md-editor.active {
+  border-color: #66afe9;
+  outline: 0;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(102, 175, 233, 0.6);
+  box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(102, 175, 233, 0.6);
 }
-#main {
-  padding-top: 15px;
-  background-color: rgba(238, 238, 238, 0.5);
-  border-radius: 0 0 4px 4px;
-  border-left: 1px solid rgba(142, 193, 218, 0.6);
-  border-right: 1px solid rgba(142, 193, 218, 0.6);
-  border-bottom: 1px solid rgba(142, 193, 218, 0.6);
+.md-editor .md-controls {
+  float: right;
+  padding: 3px;
 }
-#img-ymz {
-  max-width: 130px;
+.md-editor .md-controls .md-control {
+  right: 5px;
+  color: #bebebe;
+  padding: 3px 3px 3px 10px;
 }
-.panel-default {
-  border-color: #ededed;
+.md-editor .md-controls .md-control:hover {
+  color: #333;
 }
-.panel-default .panel-heading {
-  background-color: #f9f9f9;
-  border-bottom-color: #ededed;
+.md-editor.md-fullscreen-mode {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 99999;
+  padding: 60px 30px 15px;
+  background: #fff !important;
+  border: 0 !important;
 }
-.panel-default .panel-title {
-  font-weight: normal;
+.md-editor.md-fullscreen-mode .md-footer {
+  display: none;
 }
-.panel-default .panel-title a {
-  color: #428bca;
+.md-editor.md-fullscreen-mode .md-input,
+.md-editor.md-fullscreen-mode .md-preview {
+  margin: 0 auto !important;
+  height: 100% !important;
+  font-size: 20px !important;
+  padding: 20px !important;
+  color: #999;
+  line-height: 1.6em !important;
+  resize: none !important;
+  box-shadow: none !important;
+  background: #fff !important;
+  border: 0 !important;
+}
+.md-editor.md-fullscreen-mode .md-preview {
+  color: #333;
+  overflow: auto;
+}
+.md-editor.md-fullscreen-mode .md-input:hover,
+.md-editor.md-fullscreen-mode .md-input:focus {
+  color: #333;
+  background: #fff !important;
+}
+.md-editor.md-fullscreen-mode .md-header {
+  background: none;
+  text-align: center;
+  position: fixed;
+  width: 100%;
+  top: 20px;
+}
+.md-editor.md-fullscreen-mode .btn-group {
+  float: none;
+}
+.md-editor.md-fullscreen-mode .btn {
+  border: 0;
+  background: none;
+  color: #b3b3b3;
+}
+.md-editor.md-fullscreen-mode .btn:hover,
+.md-editor.md-fullscreen-mode .btn:focus,
+.md-editor.md-fullscreen-mode .btn.active,
+.md-editor.md-fullscreen-mode .btn:active {
+  box-shadow: none;
+  color: #333;
+}
+.md-editor.md-fullscreen-mode .md-fullscreen-controls {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  text-align: right;
+  z-index: 1002;
+  display: block;
+}
+.md-editor.md-fullscreen-mode .md-fullscreen-controls a {
+  color: #b3b3b3;
+  clear: right;
+  margin: 10px;
+  width: 30px;
+  height: 30px;
+  text-align: center;
+}
+.md-editor.md-fullscreen-mode .md-fullscreen-controls a:hover {
+  color: #333;
+  text-decoration: none;
+}
+.md-editor.md-fullscreen-mode .md-editor {
+  height: 100% !important;
+  position: relative;
+}
+.md-editor .md-fullscreen-controls {
+  display: none;
+}
+.md-nooverflow {
+  overflow: hidden;
+  position: fixed;
+  width: 100%;
+}
+body {
+  margin-top: 50px;
+}
+#wrapper {
+  padding-left: 0;
+}
+#page-wrapper {
+  width: 100%;
+  padding: 5px 15px;
+}
+/* Nav Messages */
+.messages-dropdown .dropdown-menu .message-preview .avatar,
+.messages-dropdown .dropdown-menu .message-preview .name,
+.messages-dropdown .dropdown-menu .message-preview .message,
+.messages-dropdown .dropdown-menu .message-preview .time {
+  display: block;
+}
+.messages-dropdown .dropdown-menu .message-preview .avatar {
+  float: left;
+  margin-right: 15px;
+}
+.messages-dropdown .dropdown-menu .message-preview .name {
+  font-weight: bold;
+}
+.messages-dropdown .dropdown-menu .message-preview .message {
+  font-size: 12px;
+}
+.messages-dropdown .dropdown-menu .message-preview .time {
+  font-size: 12px;
+}
+/* Nav Announcements */
+.announcement-heading {
+  font-size: 50px;
+  margin: 0;
+}
+.announcement-text {
+  margin: 0;
+}
+/* Table Headers */
+table.tablesorter thead {
+  cursor: pointer;
+}
+table.tablesorter thead tr th:hover {
+  background-color: #f5f5f5;
+}
+/* Flot Chart Containers */
+.flot-chart {
+  display: block;
+  height: 400px;
+}
+.flot-chart-content {
+  width: 100%;
+  height: 100%;
+}
+/* Edit Below to Customize Widths > 768px */
+@media (min-width: 768px) {
+  /* Wrappers */
+  #wrapper {
+    padding-left: 175px;
+  }
+  #page-wrapper {
+    padding: 15px 25px;
+  }
+  /* Side Nav */
+  .side-nav {
+    margin-left: -175px;
+    left: 175px;
+    width: 175px;
+    position: fixed;
+    top: 50px;
+    height: 100%;
+    border-radius: 0;
+    border: none;
+    background-color: #444;
+    overflow-y: auto;
+    background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAgAAAAICAQAAABuBnYAAAAAU0lEQVQIHQXBwRGDIBAAwO2/AMcCDHAcPjIRxjJ8Je1kl1uqUgphsWu6w0sIG6npLpcUBql4e/wsVRKabrkNTacIYbMrwsF06rqUhsnXVKVT+Hj+Ue4rPSONk4kAAAAASUVORK5CYII=);
+  }
+  /* Bootstrap Default Overrides - Customized Dropdowns for the Side Nav */
+  .side-nav > li.dropdown > ul.dropdown-menu {
+    position: relative;
+    min-width: 175px;
+    margin: 0;
+    padding: 0;
+    border: none;
+    border-radius: 0;
+    background-color: transparent;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+  }
+  .side-nav > li.dropdown > ul.dropdown-menu > li > a {
+    color: #999999;
+    padding: 15px 15px 15px 25px;
+  }
+  .side-nav > li.dropdown > ul.dropdown-menu > li > a:hover,
+  .side-nav > li.dropdown > ul.dropdown-menu > li > a.active,
+  .side-nav > li.dropdown > ul.dropdown-menu > li > a:focus {
+    color: #fff;
+    background-color: #080808;
+  }
+  .side-nav > li > a {
+    width: 175px;
+  }
+  .navbar-inverse {
+    background-color: #444;
+    background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAgAAAAICAQAAABuBnYAAAAAU0lEQVQIHQXBwRGDIBAAwO2/AMcCDHAcPjIRxjJ8Je1kl1uqUgphsWu6w0sIG6npLpcUBql4e/wsVRKabrkNTacIYbMrwsF06rqUhsnXVKVT+Hj+Ue4rPSONk4kAAAAASUVORK5CYII=);
+  }
+  .navbar-inverse .navbar-nav > li.active > a,
+  .navbar-inverse .navbar-nav > li > a:hover,
+  .navbar-inverse .navbar-nav > li > a:focus {
+    background-color: rgba(8, 8, 8, 0.7);
+  }
+  /* Nav Messages */
+  .messages-dropdown .dropdown-menu {
+    min-width: 300px;
+  }
+  .messages-dropdown .dropdown-menu li a {
+    white-space: normal;
+  }
+}
+/*custom admin*/
+.navbar-user {
+  padding-right: 15px;
 }
 .panel-meta {
   color: gray;
-  padding: 10px 20px 0 0;
+  padding: 10px 10px 0 0;
   margin: 0 0 -10px 0;
-}
-.panel-body {
-  line-height: 180%;
-  font-size: 110%;
 }
 .panel-body p {
   text-indent: 2em;
 }
-.panel-body img {
-  max-width: 100%;
-  height: auto;
+.breadcrumb {
+  background-color: #eaebeb;
 }
-.panel-footer {
-  border-top-color: #ededed;
-  background-color: #fcfcfc;
+@media (min-width: 768px) {
+  #page-wrapper {
+    padding: 30px 40px;
+  }
 }
-.panel-footer .glyphicon,
-.panel-heading .glyphicon {
-  margin-right: 5px;
+/*
+tagsinput
+*/
+div.tagsinput {
+  border: 1px solid #CCC;
+  background: #FFF;
+  padding: 5px 5px 0;
+  width: 300px;
+  height: 100px;
+  overflow-y: auto;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
 }
-#comments-caption {
-  padding: 10px;
-  background-color: #fdfdfd;
-  margin-left: 1px;
-  margin-right: 1px;
-  border-radius: 4px 4px 0 0;
-}
-.copyright {
+div.tagsinput span.tag {
+  border: 1px solid #a5d24a;
+  -moz-border-radius: 2px;
+  -webkit-border-radius: 2px;
+  border-radius: 2px;
+  display: block;
+  float: left;
   padding: 5px;
-  font-size: 96%;
-  line-height: 30px;
-}
-.copyright img.creativecommons {
-  border-width: 0;
-  margin-top: 0;
+  text-decoration: none;
+  background: #cde69c;
+  color: #638421;
   margin-right: 5px;
-  text-align: left;
-  height: 30px;
+  margin-bottom: 5px;
+  font-family: helvetica;
+  font-size: 13px;
 }
-.sidebar {
-  padding-top: 0;
-  padding-left: 0;
-}
-footer {
-  padding-top: 10px;
-  margin-top: 20px;
-}
-.field-validation-error {
-  color: #f00;
-}
-.field-validation-valid {
-  display: none;
-}
-.input-validation-error {
-  border: 1px solid #f00 !important;
-  background-color: #fee !important;
-}
-/* Styles for validation helpers
------------------------------------------------------------*/
-.validation-summary-errors {
-  margin-bottom: 20px;
-  padding: 8px;
-  border: 1px solid #fbeed5;
-  border-color: #eed3d7;
-  -moz-border-radius: 4px;
-  -webkit-border-radius: 4px;
-  border-radius: 4px;
-  background-color: #FDDDC4;
-  color: #b94a48;
-  text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
+div.tagsinput span.tag a {
   font-weight: bold;
-  font-size: 12px;
+  color: #82ad2b;
+  text-decoration: none;
+  font-size: 11px;
 }
-.validation-summary-errors ul {
-  margin: 5px;
-  padding: 0;
+div.tagsinput input {
+  width: 80px;
+  margin: 0;
+  font-family: helvetica;
+  font-size: 13px;
+  border: 1px solid transparent;
+  padding: 5px;
+  background: transparent;
+  color: #000;
+  outline: 0;
+  margin-right: 5px;
+  margin-bottom: 5px;
 }
-.validation-summary-errors ul li {
-  list-style: none;
-  margin: 5px 0 0;
-  padding: 5px 10px;
-  min-width: 214px;
-  border: 1px dashed #ddd;
+div.tagsinput div {
+  display: block;
+  float: left;
+}
+.tags_clear {
+  clear: both;
+  width: 100%;
+  height: 0;
+}
+.not_valid {
+  background: #FBD8DB !important;
+  color: #90111A !important;
+}
+.md-editor > textarea {
   background-color: #fff;
-  font-style: italic;
 }
-.validation-summary-valid {
-  display: none;
-}
-/*# sourceMappingURL=mzblog.css.map */
+/*# sourceMappingURL=mz-admin.css.map */
