--- a/MZBlog.Web/content/css/mz-admin.css
+++ b/MZBlog.Web/content/css/mz-admin.css
@@ -6905,5 +6905,12 @@ div.tagsinput div {
 }
 .md-editor > textarea {
   background-color: #fff;
+  padding: 20px;
+}
+.md-editor > .md-preview {
+  padding: 20px;
+}
+.md-editor > .md-preview p {
+  text-indent: 2em;
 }
 /*# sourceMappingURL=mz-admin.css.map */
