--- a/MZBlog.Web/Views/_AdminLayout.cshtml
+++ b/MZBlog.Web/Views/_AdminLayout.cshtml
@@ -10,7 +10,7 @@
         <![endif]-->
 
     <link href="~/content/css/mz-admin.min.css?v=20150402" rel="stylesheet" />
-    <link href="~/content/css/font-awesome.min.css?v=4.3.0" rel="stylesheet" />
+    <link href="~/css/font-awesome.min.css?v=4.6.1" rel="stylesheet" />
 </head>
 <body>
     <div id="wrapper">
@@ -72,7 +72,7 @@
         </div>
     </div>
 
-    <script src="~/scripts/jquery-1.11.2.min.js"></script>
+    <script src="~/scripts/jquery-3.1.0.min.js"></script>
     <script src="~/scripts/bootstrap.min.js?v=3.3.2"></script>
     <script src="~/scripts/bootstrap-markdown.js"></script>
     <script src="~/scripts/bootstrap-markdown.zh.js"></script>
