--- a/MZBlog.Web/Views/_LoginLayout.cshtml
+++ b/MZBlog.Web/Views/_LoginLayout.cshtml
@@ -11,7 +11,7 @@
     <!--[if lt IE 9]>
         <script src="~/scripts/html5shiv.js"></script>
         <![endif]-->
-    <link href="~/content/css/mzblog.min.css?v=20140402" rel="stylesheet" />
+    <link href="~/content/css/mzblog.min.css?v=20160926" rel="stylesheet" />
 </head>
 <body>
     <nav class="navbar navbar-default" role="navigation">
@@ -40,7 +40,7 @@
         </div>
     </footer>
     <script src="~/scripts/jquery-3.1.0.min.js"></script>
-    <script src="~/scripts/bootstrap.min.js?v=3.3.2"></script>
+    <script src="~/scripts/bootstrap.min.js?v=3.3.7"></script>s
     @RenderSection("PostScripts", false)
 </body>
 </html>
