--- a/MZBlog.Web/content/css/mz-admin.css
+++ b/MZBlog.Web/content/css/mz-admin.css
@@ -6725,7 +6725,7 @@ button.close {
  * Bootstrap-Markdown.less
  *
  * @author Taufan Aditya @taufanaditya
- * @copyright 2013 Taufan Aditya
+ * @copyright 2013-2016 Taufan Aditya
  */
 .md-editor {
   display: block;
