update the footer

--- a/MZBlog.Web/Views/_LoginLayout.cshtml
+++ b/MZBlog.Web/Views/_LoginLayout.cshtml
@@ -36,7 +36,7 @@
     </div>
     <footer class="footer">
         <div class="container">
-            <p class="text-center">Power by mzblog &copy; @DateTime.Now.Year</p>
+            <p class="text-center">Power by <a href="https://github.com/qihangnet/MZBlog" target="_blank">mzblog</a> &copy; @DateTime.Now.Year</p>
         </div>
     </footer>
     <script src="~/scripts/jquery-3.1.1.min.js"></script>
