修正文章正文在内容很窄的情况下的布局问题

--- a/MZBlog.Web/Pages/Detail.cshtml
+++ b/MZBlog.Web/Pages/Detail.cshtml
@@ -5,8 +5,8 @@
     ViewData["Title"] = post.Title;
 }
 
-<div class="row mb-md-3">
-    <div class="card">
+<div class="row mb-3">
+    <div class="card post-card">
         <h5 class="card-header"><a href="@post.GetLink()">@post.Title</a></h5>
         <div class="card-body pt-2">
             <div class="text-muted text-right">
