--- a/MZBlog.Web/wwwroot/css/site.css
+++ b/MZBlog.Web/wwwroot/css/site.css
@@ -12,6 +12,7 @@ a.navbar-brand {
 html {
   font-size: 14px;
 }
+
 @media (min-width: 768px) {
   html {
     font-size: 16px;
@@ -21,6 +22,7 @@ html {
 .border-top {
   border-top: 1px solid #e5e5e5;
 }
+
 .border-bottom {
   border-bottom: 1px solid #e5e5e5;
 }
@@ -34,8 +36,11 @@ button.accept-policy {
   line-height: inherit;
 }
 
-.card-body img
-{
+.card.post-card {
+  width: 100%;
+}
+
+.card-body img {
   max-width: 100%;
 }
 
@@ -50,6 +55,7 @@ body {
   /* Margin bottom by footer height */
   margin-bottom: 60px;
 }
+
 .footer {
   position: absolute;
   bottom: 0;
@@ -57,5 +63,6 @@ body {
   white-space: nowrap;
   /* Set the fixed height of the footer here */
   height: 60px;
-  line-height: 60px; /* Vertically center the text there */
+  line-height: 60px;
+  /* Vertically center the text there */
 }
