标签过滤页增加当前标签名显示

--- a/MZBlog.Web/Pages/Tagged.cshtml
+++ b/MZBlog.Web/Pages/Tagged.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewData["Title"] = Model.Data.Tag;
 }
-
+<h3><i class="fa fa-tag"></i> @Model.Data.Tag</h3>
 @foreach (var blogPost in Model.Data.Posts)
 {
     <div class="row mb-3">
