add auth config

--- a/MZBlog.Web/Pages/Admin/BlogPosts.cshtml
+++ b/MZBlog.Web/Pages/Admin/BlogPosts.cshtml
@@ -1,5 +1,5 @@
 ﻿@page "/admin/posts"
-@model MZBlog.Web.Pages.Admin.AdminBlogPostsModel
+@model MZBlog.Web.Pages.Admin.BlogPostsModel
 @{
     ViewData["Title"] = "AdminBlogPosts";
 }
