--- a/MZBlog.Web/Pages/Admin/NewPost.cshtml
+++ b/MZBlog.Web/Pages/Admin/NewPost.cshtml
@@ -1,5 +1,5 @@
 ﻿@page "/admin/posts/new"
-@model MZBlog.Web.Pages.Admin.AdminNewPostModel
+@model MZBlog.Web.Pages.Admin.NewPostModel
 @{
     ViewData["Title"] = "新建";
 }
