--- a/MZBlog.Web/Pages/Shared/_LayoutAdmin.cshtml
+++ b/MZBlog.Web/Pages/Shared/_LayoutAdmin.cshtml
@@ -59,10 +59,9 @@
                                 衣明志
                             </a>
                             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" href="#">Action</a>
-                                <a class="dropdown-item" href="#">Another action</a>
+                                <a class="dropdown-item" href="#">个人设置</a>
                                 <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="#">退出登录</a>
+                                <a class="dropdown-item" href="/logout">退出登录</a>
                             </div>
                         </li>
                     </ul>
