--- a/MZBlog.Web/Pages/Admin/Dashboard.cshtml
+++ b/MZBlog.Web/Pages/Admin/Dashboard.cshtml
@@ -1,7 +1,7 @@
 ﻿@page  "/admin"
 @model MZBlog.Web.Pages.Admin.DashboardModel
 @{
-    ViewData["Title"] = "Dashboard";
+    ViewData["Title"] = "仪表盘";
 }
 
-<h1>Dashboard</h1>
+<h1>仪表盘</h1>
