--- a/MZBlog.Web/Pages/Admin/EditPost.cshtml
+++ b/MZBlog.Web/Pages/Admin/EditPost.cshtml
@@ -8,7 +8,7 @@
     <link rel="stylesheet" asp-append-version="true" href="~/lib/editor.md/css/editormd.min.css" />
 }
 
-<h1>博客文章</h1>
+<h1>编辑文章</h1>
 
 <form method="post">
     <div class="form-group">
