--- a/MZBlog.Web/Pages/Shared/_LayoutAdmin.cshtml
+++ b/MZBlog.Web/Pages/Shared/_LayoutAdmin.cshtml
@@ -21,17 +21,17 @@
     <div class="d-flex" id="wrapper">
 
         <!-- Sidebar -->
-        <div class="bg-light border-right" id="sidebar-wrapper">
-            <div class="sidebar-heading text-center">@ViewBag.SiteTitle</div>
+        <div class="bg-dark border-right" id="sidebar-wrapper">
+            <div class="sidebar-heading text-center text-light">MZBlog</div>
             <div class="list-group list-group-flush">
-                <a href="~/admin" class="list-group-item list-group-item-action bg-light">
+                <a href="~/admin" class="list-group-item list-group-item-action bg-dark text-light">
                     <i class="fa fa-dashboard" aria-hidden="true"></i> 仪表盘
                 </a>
-                <a href="~/admin/posts" class="list-group-item list-group-item-action bg-light">
+                <a href="~/admin/posts" class="list-group-item list-group-item-action bg-dark text-light">
                     <i class="fa fa-list" aria-hidden="true"></i>
                     文章管理
                 </a>
-                <a href="#" class="list-group-item list-group-item-action bg-light">
+                <a href="#" class="list-group-item list-group-item-action bg-dark text-light">
                     <i class="fa fa-comments" aria-hidden="true"></i>
                     留言管理
                 </a>
