更新备案号

--- a/MZBlog.Web/Pages/Shared/_Layout.cshtml
+++ b/MZBlog.Web/Pages/Shared/_Layout.cshtml
@@ -43,7 +43,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; @DateTime.Now.Year - @ViewBag.SiteTitle - <a asp-area="" asp-page="/Privacy">隐私条款</a> <a href="https://beian.miit.gov.cn/" target="_blank">鲁ICP备18019591号</a>
+            &copy; @DateTime.Now.Year - @ViewBag.SiteTitle - <a asp-area="" asp-page="/Privacy">隐私条款</a> <a href="https://beian.miit.gov.cn/" target="_blank">鲁ICP备18019591号-1</a>
         </div>
     </footer>
 
